--- a/classproject/000courseCompilation/css/styles.scss
+++ b/classproject/000courseCompilation/css/styles.scss
@@ -6,11 +6,13 @@
     // padding: 0;
     // margin: 0;
     // font-size: 16px;
+    box-sizing: border-box;
 }
 
-html, body {
+html,
+body {
     color: #233d4dff;
-    background-color:#e9e3e6ff;
+    background-color: #e9e3e6ff;
 }
 
 //
@@ -21,13 +23,50 @@ html, body {
     padding: 50px 0;
 }
 
+.hamburger-outer {
+    display: inline-block;
+    overflow: visible;
+    padding: 15px;
+    // margin-right: 200px;
+}
+
+.hamburger-inner, .hamburger-inner::after, .hamburger-inner::before {
+    position: absolute;
+    background-color: #e9e3e6ff;
+    width: 40px;
+    height: 4px;
+    border-radius: 4px;
+}
+
+.hamburger-inner {
+    display: block;
+    top: 5%;
+    left: 5%;
+    margin-top: -2px;
+}
+
+.hamburger-inner::after, .hamburger-inner::before {
+    content: "";
+    left: 0px;
+}
+ 
+.hamburger-inner::after {
+    top: 10px;
+}
+.hamburger-inner::before {
+    top: -10px;
+}
 //
 // TITLE SECTION
 //
 
 #title {
     background-color: #233d4dff;
-    color:#e9e3e6ff;
+    color: #e9e3e6ff;
+
+    h1 {
+        display: inline-block;
+    }
 }
 
 
@@ -35,8 +74,7 @@ html, body {
 // BIKE SELECTION SECTION
 //
 
-#bike-selection {
-}
+// #bike-selection {}
 
 #bike-selection-title {
     padding: 50px 0;
@@ -52,8 +90,26 @@ html, body {
     width: 30rem;
     height: auto;
     margin: 20px auto;
-    box-shadow: grey 3px 3px;
+    box-shadow: 10px 10px 4px grey;
     margin-bottom: 73px;
+}
+
+.bike-info-links {
+    display: inline-block;
+    background-color: #ffc533ff;
+    border-radius: 10px;
+    padding: 5px 20px;
+}
+
+.bike-info-links:hover {
+    background-color: rgb(255, 216, 116);
+    text-decoration: none;
+    box-shadow: 0px 5px 3px grey;
+}
+
+.bike-info-links:active {
+    background-color: #ffc533ff;
+    box-shadow: none;
 }
 
 //
@@ -73,15 +129,23 @@ html, body {
 // MAINTENANCE SCHEDULE SECTION
 //
 
+//
+// TROUBLE SHOOTING SECTION
+//
+
+#trouble-shooting {
+    background-color: whitesmoke;
+}
 
 //
 // FOOTER SECTION
 //
 
 #footer {
-    background-color: whitesmoke;
+    // background-color: whitesmoke;
     width: 100%;
     padding: 10px 0;
+
     p {
         text-align: center;
         margin-bottom: 0;
@@ -98,47 +162,5 @@ html, body {
 // --blood-red: #6b0504ff;
 // --pale-silver: #c3babaff;
 // --mikado-yellow: #ffc533ff;
+// --hover-yellow: rgb(255, 216, 116);
 // --platinum: #e9e3e6ff;
-
-// /* CSS HSL */
-// --charcoal: hsla(203, 37%, 22%, 1);
-// --red-ryb: hsla(5, 100%, 52%, 1);
-// --blood-red: hsla(1, 93%, 22%, 1);
-// --pale-silver: hsla(0, 7%, 75%, 1);
-// --mikado-yellow: hsla(43, 100%, 60%, 1);
-// --platinum: hsla(330, 12%, 90%, 1);
-
-// /* SCSS HEX */
-// $charcoal: #233d4dff;
-// $red-ryb: #ff220cff;
-// $blood-red: #6b0504ff;
-// $pale-silver: #c3babaff;
-// $mikado-yellow: #ffc533ff;
-// $platinum: #e9e3e6ff;
-
-// /* SCSS HSL */
-// $charcoal: hsla(203, 37%, 22%, 1);
-// $red-ryb: hsla(5, 100%, 52%, 1);
-// $blood-red: hsla(1, 93%, 22%, 1);
-// $pale-silver: hsla(0, 7%, 75%, 1);
-// $mikado-yellow: hsla(43, 100%, 60%, 1);
-// $platinum: hsla(330, 12%, 90%, 1);
-
-// /* SCSS RGB */
-// $charcoal: rgba(35, 61, 77, 1);
-// $red-ryb: rgba(255, 34, 12, 1);
-// $blood-red: rgba(107, 5, 4, 1);
-// $pale-silver: rgba(195, 186, 186, 1);
-// $mikado-yellow: rgba(255, 197, 51, 1);
-// $platinum: rgba(233, 227, 230, 1);
-
-// /* SCSS Gradient */
-// $gradient-top: linear-gradient(0deg, #233d4dff, #ff220cff, #6b0504ff, #c3babaff, #ffc533ff, #e9e3e6ff);
-// $gradient-right: linear-gradient(90deg, #233d4dff, #ff220cff, #6b0504ff, #c3babaff, #ffc533ff, #e9e3e6ff);
-// $gradient-bottom: linear-gradient(180deg, #233d4dff, #ff220cff, #6b0504ff, #c3babaff, #ffc533ff, #e9e3e6ff);
-// $gradient-left: linear-gradient(270deg, #233d4dff, #ff220cff, #6b0504ff, #c3babaff, #ffc533ff, #e9e3e6ff);
-// $gradient-top-right: linear-gradient(45deg, #233d4dff, #ff220cff, #6b0504ff, #c3babaff, #ffc533ff, #e9e3e6ff);
-// $gradient-bottom-right: linear-gradient(135deg, #233d4dff, #ff220cff, #6b0504ff, #c3babaff, #ffc533ff, #e9e3e6ff);
-// $gradient-top-left: linear-gradient(225deg, #233d4dff, #ff220cff, #6b0504ff, #c3babaff, #ffc533ff, #e9e3e6ff);
-// $gradient-bottom-left: linear-gradient(315deg, #233d4dff, #ff220cff, #6b0504ff, #c3babaff, #ffc533ff, #e9e3e6ff);
-// $gradient-radial: radial-gradient(#233d4dff, #ff220cff, #6b0504ff, #c3babaff, #ffc533ff, #e9e3e6ff);
