--- a/classproject/005tindog/TinDog-Start-master/css/styles.css
+++ b/classproject/005tindog/TinDog-Start-master/css/styles.css
@@ -1,13 +1,8 @@
 * {
   font-family: 'Montserrat', sans-serif;
-}
-
-body {
-  background-color: whitesmoke;
-}
-
-section {
-  background-color: whitesmoke;
+  color: #141414;
+  margin: 0;
+  padding: 0;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -25,9 +20,27 @@ h1, h2, h3, h4, h5, h6 {
   line-height: 1.5;
 }
 
+.section-large-padding {
+  padding: 10% 0;
+}
+
+.section-small-padding {
+  padding: 5% 0;
+}
+
 .pricing-card-heading {
   font-size: 1.7rem;
   line-height: 1.5;
+}
+
+.colored-section {
+  color: whitesmoke;
+  background-color: #ff4c68;
+}
+
+.white-section {
+  color: #141414;
+  background-color: whitesmoke;
 }
 
 .container-fluid {
@@ -56,11 +69,6 @@ br {
 .nav-link {
   font-size: .9rem;
   font-weight: light;
-}
-
-#title {
-  background-color: #ff4c68;
-  color: whitesmoke;
 }
 
 .container-fluid {
@@ -132,11 +140,11 @@ br {
 #testimonial-carousel {
   background-color: #ef8172;
   text-align: center;
-  color: #fff;
+  padding: 100px 0;
 }
 
 .carousel-item {
-  padding: 7% 18%;
+  padding: 0% 18%;
 }
 
 .testimonial-image {
@@ -150,24 +158,26 @@ br {
 }
 
 #press {
-  background-color: #ff4c68;
   text-align: center;
-  padding: 3% 0 1%;
+  padding: 5% 0;
 }
 
 .press-logo {
   width: 15%;
-  margin: 20px 20px 50px;
 }
 
 #pricing {
   background-color: whitesmoke;
-  padding: 100px;
+  padding: 10% 0;
   text-align: center;
 }
 
+.pricing-header {
+  margin-bottom: 6%;
+}
+
 .pricing-column {
-  padding: 3% 2%;
+  padding: 0% 2%;
 }
 
 .pricing-price {
@@ -181,10 +191,9 @@ br {
 }
 
 #cta {
-  background-color: #ff4c68;
   text-align: center;
-  color: white;
-  padding: 10% 15%;
+  padding-left: 15%;
+  padding-right: 15%;
 }
 
 #cta .cta-button {
@@ -203,7 +212,6 @@ br {
   background-color: whitesmoke;
   font-size: 60%;
   text-align: center;
-  padding: 5% 0;
 }
 
 #footer p {
