--- a/classproject/006colorTheoryAndDesign/css/style.scss
+++ b/classproject/006colorTheoryAndDesign/css/style.scss
@@ -1,7 +1,10 @@
 // colors
-
-
-
+// #F5C2A4
+// #A84B13
+// #F5C833
+// #E0F5B3
+// #83A834
+// rgb(245, 245, 245);
 // universal styles
 
 * {
@@ -14,26 +17,35 @@
 html,
 body {
     text-align: center;
+    height: 100%;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
 }
 
 section {
-    // padding: 50px 5px;
+    position: relative;
     border-top: 1px solid black;
+    background: rgb(245, 245, 245);
+    background-color: rgb(245, 245, 245);
+    z-index: 3;
+    opacity: 1;
 }
 
 // headings
 
 .section-header {
-    padding: 50px 0 50px;
+    padding: 100px 0 100px;
 }
 
 .card-heading {
     text-align: center;
-    background-color: rgb(204, 204, 204);
-    background-color: #f7f7f7;
+    background-color: #2288E0;
     padding: 20px 0;
     border-radius: 15px 15px 0 0;
-    border-bottom: 1px solid rgb(223, 223, 223);
+    border-bottom: 1px solid #0F5794;
 }
 
 .card-heading>h3 {
@@ -66,19 +78,51 @@ section {
     border: 1px solid rgb(223, 223, 223);
     padding: 12px 24px;
     width: 200px;
-    background-color: cadetblue;
+    background-color: #E0692D;
     border-radius: 15px;
     align-self: center;
     margin-bottom: 35px;
 }
+
 .card-button:hover {
     background-color: teal;
 }
 
 // brand
 
+.brand-background {
+    position: fixed;
+    z-index: -1;
+
+
+}
+
+.brand {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    justify-content: center;
+    flex: 1 0 auto;
+    background-color: black;
+    z-index: 0;
+    background-image: linear-gradient(to right top, #460000, #490022, #460034, #292141, #122235, #002d3d, #015264, #003538, #003632, #003021, #235226, #223000);
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    h1 {
+        position: relative;
+        z-index: 1;
+        color: white;
+        font-size: 3rem;
+    }
+}
+
 // color-feel
-#color-feel {}
+.color-feel {
+    z-index: 2;
+    background-color: whitesmoke;
+}
 
 .color-cards {
     margin: 5px 0;
@@ -94,17 +138,18 @@ section {
 }
 
 .color-cards>div {
-    border: 1px solid rgb(223, 223, 223);
+    border: 1px solid #0F5794;
     border-radius: 15px;
     flex: 1 0 280px;
     margin: 10px 10px;
     max-width: 400px;
+    margin-bottom: 150px;
 
     ul {
         padding: 25px 0px 25px 0px;
         list-style-type: none;
         font-weight: bold;
-        
+
     }
 }
 
@@ -112,16 +157,81 @@ section {
 
 .choosing-colors {
     display: flex;
+    color: white;
+    // background-color: rgb(232, 255, 255);
+    background: linear-gradient(rgb(255, 216, 216), rgb(210, 244, 255));
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    flex-wrap: wrap;
 }
 
-.choosing-colors-list {
-    // text-align: left;
-    padding: 50px 1%;
+.choosing-colors__text {
+    flex: 1 1 auto;
+    justify-content: flex-end;
+    padding-bottom: 100px;
+
+}
+
+.choosing-colors__img-containter {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex: 1 1 auto;
+    padding-bottom: 100px;
+
+    .colorwheel-img {
+        width: 300px;
+        height: auto;
+        margin: 0 5%;
+    }
+}
+
+
+.yellow-box {
+    position: relative;
+    display: inline-block;
+    background-color: yellow;
+    height: 30px;
+    width: 30px;
+}
+
+.green-box {
+    position: relative;
+    display: inline-block;
+    background-color: greenyellow;
+    height: 30px;
+    width: 30px;
+}
+
+.purple-box {
+    position: relative;
+    display: inline-block;
+    background-color: purple;
+    height: 30px;
+    width: 30px;
+}
+
+// filler
+
+.filler {
+    text-align: left;
+    padding-bottom: 50px;
+
+    h2 {
+        text-align: center;
+    }
 }
 
 // footer
+.footer-spacer {
+    flex-grow: 1;
+}
 
 footer {
-    padding: 1%;
-    background-color: teal;
+    position: relative;
+    font-size: 60%;
+    background-color: rgb(232, 255, 255);
+    padding: 30px 0;
 }
