--- a/classprojects/000Testing/css/style.css
+++ b/classprojects/000Testing/css/style.css
@@ -1,3 +1,27 @@
-h1 {
-  color: darkblue;
+/*  */
+/* colors */
+/*  */
+color1 = blue
+
+
+
+/*  */
+/* universal styles */
+/*  */
+* {
+  padding: 0;
+  margin: 0;
+  text-size: 16px;
+}
+
+body,html {
+  width: 100%;
+  height: 100%;
+}
+
+/* headings */
+.brand {
+  font-size: 4rem;
+  padding: 20px;
+  text-align: center;
 }
