--- a/classprojects/000Testing/css/style.css
+++ b/classprojects/000Testing/css/style.css
@@ -25,3 +25,32 @@ body,html {
   padding: 20px;
   text-align: center;
 }
+
+/*  */
+/* flex / grid testing area */
+/*  */
+main {
+  height: 50vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+
+.box1 {
+  background-color: blue;
+}
+.box2 {
+  background-color: green;
+}
+.box3 {
+  background-color: yellow;
+}
+.box4 {
+  background-color: orange;
+}
+.box5 {
+  background-color: purple;
+}
+.box6 {
+  background-color: red;
+}
