--- a/myprojects/benFranklin/css/style.css
+++ b/myprojects/benFranklin/css/style.css
@@ -1,6 +1,7 @@
 * {
   box-sizing: border-box;
   font-size: 16px;
+  background-color: #ededed;
 }
 
 html, body {
@@ -8,12 +9,12 @@ html, body {
   min-height: 100vh;
 }
 
-header {
+.main-header {
   display: flex;
   width: 100vw;
   border-bottom: 1px solid #000;
 }
-header h1 {
+.main-header h1 {
   font-size: 2rem;
   display: inline-block;
 }
@@ -27,6 +28,10 @@ nav .nav-item {
   display: inline-block;
 }
 
+td > input {
+  width: 8rem;
+}
+
 .hero-heading {
   font-size: 2rem;
 }
@@ -38,6 +43,8 @@ nav .nav-item {
 .heading-two {
   font-size: 2.8rem;
   text-align: center;
+  border-bottom: 1px solid #000;
+  border-bottom: 80px;
 }
 
 .heading-three {
