--- a/myprojects/benFranklin/css/_components.scss
+++ b/myprojects/benFranklin/css/_components.scss
@@ -1,24 +1,3 @@
-// Colors
-$black: #000;
-$white: #ededed;
-$grey: #ddd;
-$darkpurple: #86009e;
-$lightpurple: #ab00ca;
-
-
-
-
-// Universal
-
-* {
-  box-sizing: border-box;
-  font-size: 16px;
-  background-color: $white;
-}
-html, body {
-  min-width: 100vw;
-  min-height: 100vh;
-}
 
 // HEADER / NAV BAR
 .main-header {
@@ -38,34 +17,46 @@ nav {
     display: inline-block;
   }
 }
-td>input {
-  width: 8rem;
-}
-
-
 
 
 // Headings
 .hero-heading {
   font-size: 2rem;
 }
+
 .heading-one {
   font-size: 3rem;
 }
+
 .heading-two {
   font-size: 2.8rem;
   text-align: center;
   border-bottom: 1px solid $black;
   border-bottom: 80px;
 }
+
+.heading-two:after {
+  content: "";
+  display: block;
+  margin: 0 auto;
+  padding-bottom: 20px;
+  border-bottom: 1px solid $black;
+  width: 50%;
+}
+
 .heading-three {
   font-size: 2.5rem;
 }
 
 
+//Buttons
+.clear {
+  display: block;
+  margin: 10px auto;
+}
+
 
 // TABLES
-
 table, th, tr, td {
   border: 1px solid $black;
   border-collapse: collapse;
@@ -102,3 +93,4 @@ tr:nth-child(even) {
     background-color: $lightpurple;
   }
 }
+
