--- a/myprojects/benFranklin/css/style.css
+++ b/myprojects/benFranklin/css/style.css
@@ -28,10 +28,6 @@ nav .nav-item {
   display: inline-block;
 }
 
-td > input {
-  width: 8rem;
-}
-
 .hero-heading {
   font-size: 2rem;
 }
@@ -47,8 +43,22 @@ td > input {
   border-bottom: 80px;
 }
 
+.heading-two:after {
+  content: "";
+  display: block;
+  margin: 0 auto;
+  padding-bottom: 20px;
+  border-bottom: 1px solid #000;
+  width: 50%;
+}
+
 .heading-three {
   font-size: 2.5rem;
+}
+
+.clear {
+  display: block;
+  margin: 10px auto;
 }
 
 table, th, tr, td {
@@ -82,6 +92,10 @@ th:nth-child(even) {
 
 tr:nth-child(even) th {
   background-color: #ab00ca;
+}
+
+td > input {
+  width: 8rem;
 }
 
 /*# sourceMappingURL=style.css.map */
