--- a/myprojects/benFranklin/css/_layout.scss
+++ b/myprojects/benFranklin/css/_layout.scss
@@ -1,3 +1,11 @@
+// main
+main {
+  display: flex;
+  flex-direction: column;
+  width: 100vw;
+  align-items: center;
+}
+
 // Header / Nav Bar
 
 // Tracker Section
